<resources>
    <string name="app_name">Practica5</string>
    <string name="welcome_text">¡Bienvenido a Los Portales!</string>
    <string name="welcome_description">Taquería Los Portales es un restaurante rápido y casual.</string>
    <string name="button_start">¡Empezar!</string>

    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="terms">I have readand acept the terms an conditions of the Portales</string>


    <string name="our_menu">OUR MENU</string>
    <string name="antojitos">Antojitos</string>
    <string name="especialidades">Especialidades</string>
    <string name="conbinaciones">Combinations</string>
    <string name="tortas">Tortas</string>
    <string name="sopas">Sopas</string>
    <string name="drinks">Drinks</string>
</resources>