<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grupo1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/our_menu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="185dp"
        android:columnCount="2"
        android:paddingHorizontal="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/buttonAntojitos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/antojitos"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/buttonEspecialidades"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/especialidades"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/buttonCombinatios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/conbinaciones"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/buttonTortas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/tortas"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/buttonSopas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/sopas"
            android:textSize="@dimen/menu_buttons_text" />

        <Button
            android:id="@+id/buttonDriks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/drinks"
            android:textSize="@dimen/menu_buttons_text" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>