<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/input_margin"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />



    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/input_margin"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/input_margin"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/input_margin"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="39dp"
        android:text="@string/terms"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="377dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/input_margin"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextText2"
        app:layout_constraintEnd_toEndOf="@+id/editTextText2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextText3"
        app:layout_constraintEnd_toEndOf="@+id/editTextText3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen1" />
    <Button
        android:id="@+id/button2"
        android:layout_width="219dp"
        android:layout_height="0dp"
        android:layout_marginBottom="111dp"
        android:text="Sing Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>